# strata-tui

./: .gitignore  CMakeLists.txt  GUIDE.md  INTERNALS.md  README.md  test.cpp
cmake/: StrataConfig.cmake.in  strata.pc.in
include/Strata/: strata.hpp  ui.hpp
include/Strata/core/: alert_manager.hpp  app.hpp  container.hpp  reactive.hpp  rect.hpp  widget.hpp
include/Strata/events/: event.hpp
include/Strata/layout/: constraint.hpp  layout.hpp
include/Strata/render/: backend.hpp  canvas.hpp
include/Strata/style/: cell.hpp  color.hpp  style.hpp
include/Strata/widgets/: block.hpp  button.hpp  checkbox.hpp  grid.hpp  input.hpp  label.hpp  modal.hpp  progressbar.hpp  radiogroup.hpp  reactive_container.hpp  scroll_view.hpp  select.hpp  spinner.hpp  switch.hpp  textbox.hpp
src/core/: alert_manager.cpp  app.cpp  container.cpp  focus_manager.cpp  focus_manager.hpp  widget.cpp
src/layout/: layout.cpp
src/render/: canvas.cpp  ncurses_backend.cpp  ncurses_backend.hpp
src/widgets/: block.cpp  button.cpp  checkbox.cpp  grid.cpp  input.cpp  label.cpp  modal.cpp  progressbar.cpp  radiogroup.cpp  reactive_container.cpp  scroll_view.cpp  select.cpp  spinner.cpp  switch.cpp  textbox.cpp
